--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>i am using this site to document my musical journey oooo</p>
 <p>please enjoy this complimentary photo of a clarinet :3</p>
 
-<img src=”https://en.wikipedia.org/wiki/File:Boehm%2BOehler.jpg”>
+<img src=”https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Boehm%2BOehler.jpg/190px-Boehm%2BOehler.jpg”>
 
 </body>
 </html>
