--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <p>i am using this site to document my musical journey oooo</p>
 <p>please enjoy this complimentary photo of a clarinet :3</p>
 
+<a href="about.html">About Me</a>
+  
 <iframe src="https://drive.google.com/file/d/1YYnycxeeG5C2ZQVUAOKKkE6RmmHuo6Ur/preview" width="640" height="480" allow="autoplay"></iframe>
 
 </body>
