--- a/about/about.html
+++ b/about/about.html
@@ -7,3 +7,4 @@
 <p><span style="color: #5678f5;">A: All the woodwinds! Maybe starting with Eb Clarinet, and slowly expanding my reach. One day I'll be strong enough to play flute! I'm also hoping to be able to pick up percussion as well.</span></p>
 <h3><span style="color: #bcf5eb;">Q: What else do you do?</span></h3>
 <p><span style="color: #5678f5;">A: Honestly just whatever I feel like, but a lot of video games; I've been doing a LOT of modded Minecraft recently, and it's been fun suffering through Modern Industrialization.&nbsp;</span></p>
+<p>&nbsp;</p><a href="index.html">Return Home</a> 
