--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Luna does music</title>
+<title>Luna Does Music</title>
 </head>
 <body>
 
-<h1>luna.band</h1>
-<p>i am using this site to document my musical journey oooo</p>
-<p>please enjoy this complimentary photo of a clarinet :3</p>
-
-<a href="about/about.html">About Me</a>
-  
-<iframe src="https://drive.google.com/file/d/1YYnycxeeG5C2ZQVUAOKKkE6RmmHuo6Ur/preview" width="640" height="480" allow="autoplay"></iframe>
+<div style="background-color: #b896eb ; padding: 50px; border: 5px solid #6b2bcc ">
+<div id="demobox" style="text-align: center;"><span style="color: #c3c3c3;">&laquo; &lsaquo;</span> November 18th 2024 <span style="color: #c3c3c3;">&rsaquo; &raquo;</span></div>
+</div>
+<p>Ironically the same day of my first post here is my All County audition.<br />Here's to hoping it goes well, yet it's always good to expect the worst.<br />Later will be included a video of my etude! As best as I can get it, at least.&nbsp;</p>
+<p><a href="about/about.html">About Me</a></p>
 
 </body>
 </html>
