--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 </head>
 <body>
 
-<div style="background-color: #b896eb ; padding: 50px; border: 5px solid #6b2bcc ">
-<div id="demobox" style="text-align: center;"><span style="color: #c3c3c3;">&laquo; &lsaquo;</span> November 18th 2024 <span style="color: #c3c3c3;">&rsaquo; &raquo;</span></div>
+<div style="background-color: #b896eb; padding: 50px; border: 5px solid #6b2bcc;">
+<div id="demobox" style="text-align: center;"><span style="color: #c3c3c3;">&laquo; &lsaquo;</span> November 18th 2024 <span style="color: #c3c3c3;">&rsaquo; &raquo;</span>
+<p style="text-align: right;"><a href="about/about.html"><small>About Me!</small></a></p>
+</div>
 </div>
 <p>Ironically the same day of my first post here is my All County audition.<br />Here's to hoping it goes well, yet it's always good to expect the worst.<br />Later will be included a video of my etude! As best as I can get it, at least.&nbsp;</p>
-<p><a href="about/about.html">About Me</a></p>
 
 </body>
 </html>
