--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body>
 
 <div style="background-color: #b896eb; padding: 30px; border: 3px solid #6b2bcc;">
-<div id="demobox" style="text-align: center;"><span style="color: #c3c3c3;"><a href="archive/11-19-2024.html">&laquo;</a> <a href="archive/11-19-2024.html">&lsaquo;</a></span> November 19th 2024 <span style="color: #c3c3c3;">&rsaquo; &raquo;</span>
+<div id="demobox" style="text-align: center;"><span style="color: #c3c3c3;"><a href="archive/11-18-2024.html">&laquo;</a> <a href="archive/11-18-2024.html">&lsaquo;</a></span> November 19th 2024 <span style="color: #c3c3c3;">&rsaquo; &raquo;</span>
 <p style="text-align: right;"><a href="about/about.html"><small>About Me!</small></a></p>
 </div>
 </div>
-<p>Bunch of new music to sight read so today's practice video is the easiest one: Sleigh Ride! Or as I like to call it, "Slay Ride". First time I get to be in a full orchestra too so that's quite fun.<br />I'll eventually get around to the other stuff, it's just that... I have more "important" things to get to.&nbsp;</p>
+<p>Bunch of new music to sight read so today's practice video is the easiest one: Sleigh Ride! Or as I like to call it, "Slay Ride".<br />First time I get to be in a full orchestra too so that's quite fun.<br />I'll eventually get around to the other stuff, it's just that... I have more "important" things to get to.&nbsp;</p>
 
 </body>
 </html>
