--- a/about/about.html
+++ b/about/about.html
@@ -1,3 +1,5 @@
+<title>About Me!~</title>
+
 <h1><span style="color: #c476db;">About Me!</span></h1>
 <h3><span style="color: #bcf5eb;">Q: Who are you?</span></h3>
 <p><span style="color: #5678f5;">A: I'm a high schooler who likes playing instruments! I play clarinet and tenor saxophone, and I'm also an aspiring drum major. (fingers crossed!)</span></p>
