--- a/about/about.html
+++ b/about/about.html
@@ -11,4 +11,4 @@
 <p><span style="color: #5678f5;">A: Honestly just whatever I feel like, but a lot of video games; I've been doing a LOT of modded Minecraft recently, and it's been fun suffering through Modern Industrialization.&nbsp;</span></p>
 <h3><span style="color: #bcf5eb;">Q: What's the point of this site?</span></h3>
 <p><span style="color: #5678f5;">A: Helping push myself to practice daily! It's definitely something I need to improve on and so this will hopefully help me practice more often.&nbsp;</span></p>
-<p>&nbsp;</p><a href="https://luna.band">Return Home</a> 
+<p>&nbsp;</p><a href="../index.html">Return Home</a> 
