--- a/search/main.html
+++ b/search/main.html
@@ -50,7 +50,7 @@
 <td style="width: 14.285714%;"><a href="../archive/11-19-2024.html">19</a></td>
 <td style="width: 14.285714%;"><a href="../archive/11-20-2024.html">20</a></td>
 <td style="width: 14.285714%;"><a href="../archive/11-21-2024.html">21</a></td>
-<td style="width: 14.285714%;">22</td>
+<td style="width: 14.285714%;"><a href="../archive/11-22-2024.html">22</a></td>
 <td style="width: 14.285714%;">23</td>
 </tr>
 <tr>
