--- a/performances/lakeside-2025/swing-shift.html
+++ b/performances/lakeside-2025/swing-shift.html
@@ -18,6 +18,7 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  font-family: 'Arial', sans-serif;
   font-size: 16px;
   margin: 4px 2px;
   transition-duration: 0.4s;
@@ -57,8 +58,8 @@ body {
 <body>
 
 <button class="button button1">Swing Shift</button>
-<form action="https://www.google.com"><button type="submit" class="button button2">Just When I'm Thinkin' 'Bout You</button></form>
-<form action="apollos-reel.html"><button type="submit" class="button button3">Apollo's Reel</button></form>
+<a href="just-when-im-thinkin-bout-you.html" class="button button2">Just When I'm Thinkin' 'Bout You</a>
+<a href="apollos-reel.html" class="button button3">Apollo's Reel</a>
 
 </body>
 </html> 
