--- a/performances/lakeside-2025/swing-shift.html
+++ b/performances/lakeside-2025/swing-shift.html
@@ -58,8 +58,8 @@ body {
 <body>
 
 <button class="button button1">Swing Shift</button>
-<a href="just-when-im-thinkin-bout-you.html" class="button button2">Just When I'm Thinkin' 'Bout You</a>
-<a href="apollos-reel.html" class="button button3">Apollo's Reel</a>
+<a href="just-when-im-thinkin-bout-you" class="button button2">Just When I'm Thinkin' 'Bout You</a>
+<a href="apollos-reel" class="button button3">Apollo's Reel</a>
 </br>
 <iframe src="https://drive.google.com/file/d/1xK10IJ4hFvix1Q5UjbARc2xPr8U0KAEX/preview" width="1080" height="810" allow="autoplay"></iframe>
 </body>
