--- a/performances/lakeside-2025/just-when-im-thinkin-bout-you.html
+++ b/performances/lakeside-2025/just-when-im-thinkin-bout-you.html
@@ -57,9 +57,9 @@ body {
 </head>
 <body>
 
-<a href="swing-shift.html" class="button button1">Swing Shift</a>
+<a href="swing-shift" class="button button1">Swing Shift</a>
 <button class="button button2">Just When I'm Thinkin' 'Bout You</button>
-<a href="apollos-reel.html" class="button button3">Apollo's Reel</a>
+<a href="apollos-reel" class="button button3">Apollo's Reel</a>
 </br>
 <iframe src="https://drive.google.com/file/d/1vCYqgqpYqb5wxz-bsOGTEibicPC8giG5/preview" width="1080" height="810" allow="autoplay"></iframe>
 </body>
