--- a/performances/lakeside-2025/index.html
+++ b/performances/lakeside-2025/index.html
@@ -18,6 +18,7 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   margin: 4px 2px;
   transition-duration: 0.4s;
@@ -62,9 +63,9 @@ body {
 </head>
 <body>
 
-<button class="button button1">Swing Shift</button>
-<button class="button button2">Just When I'm Thinkin' 'Bout You</button>
-<button class="button button3">Apollo's Reel</button>
+<a href="swing-shift" class="button button1">Swing Shift</a>
+<a href="just-when-im-thinkin-bout-you" class="button button2">Just When I'm Thinkin' 'Bout You</a>
+<a href="apollos-reel" class="button button3">Apollo's Reel</a>
 
 </body>
-</html> 
+</html>
