--- a/performances/lakeside-2025/swing-shift.html
+++ b/performances/lakeside-2025/swing-shift.html
@@ -4,7 +4,7 @@
 <title>Lakeside Jazz Festival 2025</title>
 <style> 
 body {
-  background-image: url('https://media.discordapp.net/attachments/1032113374420549692/1365517095265370164/image5-min.png?ex=680d9865&is=680c46e5&hm=f6715c1dec4baa9dcabeac6a0ae7302ddd59f31325b0438208c7c3dbdb7baeac&=&format=webp');
+  background-image: url('https://luna.band/images/image5-min.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
