--- a/8bit/index.html
+++ b/8bit/index.html
@@ -1,1 +1,4 @@
-
+ <video width="1280" height="720" controls>
+  <source src="animals_mvt1.mov" type="video/mov">
+Your browser does not support the video tag.
+</video> 
