--- a/8bit/index.html
+++ b/8bit/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
  <body>
-<video width="1280" height="720" controls>
-  <source src="animals_mvt1.mov" type="video/mov">
-Your browser does not support the video tag.
 </video> 
+  <video controls="controls" width="1280" height="720" name="Video Name">
+  <source src="animals_mvt1.mov">
+</video>
+
   </body>
 </html>
 
